--- a/index.html
+++ b/index.html
@@ -66,10 +66,18 @@
             <div class="container">
             <h2 class="about_title">Чем занимаемся</h2>
             <ul class="img-ul">
-                <li class="img-ul__li"><img src="./img/img-1.png"
-                         alt=""
-                         width="370"
-                         height="294"></li>
+                <li class="img-ul__li">
+                    <picture>
+                    <sourse
+                    srcset="
+                    ./img/img-1-1200-x.jpg 1x,
+                    ./img/img-1-1200-2x.jpg 2x"
+                    media="(min-width: 1200px)"/>
+                     <img
+                        src="./img/img-1.png"
+                         alt="Игорь Демьяненко"/>
+                    </picture>
+                        </li>
                 <li class="img-ul__li"><img src="./img/img-2.png"
                          alt=""
                          width="370"
@@ -85,10 +93,26 @@
             <div class="container">
             <h2 class="team-name">Наша команда</h2>
             <ul class="team">
-                <li class="team__li"><img src="./img/img-4.jpg" 
-                         alt="Игорь Демьяненко"
-                         width="270"
-                         height="260">
+                <li class="team__li">
+                    <picture>
+                    <sourse
+                    srcset="
+                    ./img/img-4-1200-x.jpg 1x,
+                    ./img/img-4-1200-2x.jpg 2x"
+                    media="(min-width: 1200px)"/>
+                    <sourse 
+                    srcset="
+                    ./img/img-4-768-x.jpg 1x,
+                    ./img/img-4-768-2x.jpg 2x"
+                     media="(min-width: 768px)" />
+                      <sourse srcset="
+                    ./img/img-4-480-x.jpg 1x,
+                    ./img/img-4-480-2x.jpg 2x"
+                     media="(min-width: 480px)" />
+                     <img
+                        src="./img/img-4.jpg"
+                         alt="Игорь Демьяненко"/>
+                    </picture>
                     <div class="team__h-p"><h4 class="name">Игорь Демьяненко</h4>
                     <p class="team__profession">Product Designer</p>
                     <ul class="team__social-icons">
@@ -118,10 +142,22 @@
                         </a></li>
                     </ul>
                     </div></li>
-                <li class="team__li"><img src="./img/img-5.jpg"
-                         alt="Ольга Репина"
-                         width="270"
-                         height="260">
+                <li class="team__li">
+                <picture>
+                    <sourse srcset="
+                                    ./img/img-5-1200-x.jpg 1x,
+                                    ./img/img-5-1200-2x.jpg 2x"
+                                     media="(min-width: 1200px)" />
+                    <sourse srcset="
+                                    ./img/img-5-768-x.jpg 1x,
+                                    ./img/img-5-768-2x.jpg 2x" 
+                                    media="(min-width: 768px)" />
+                    <sourse srcset="
+                                    ./img/img-5-480-x.jpg 1x,
+                                    ./img/img-5-480-2x.jpg 2x"
+                                     media="(min-width: 480px)" />
+                    <img src="./img/img-5.jpg" alt="Игорь Демьяненко" />
+                </picture>
                     <div class="team__h-p"><h4 class="name">Ольга Репина</h4>
                     <p class="team__profession">Frontend Developer</p>
                     <ul class="team__social-icons">
@@ -151,10 +187,19 @@
                             </a></li>
                     </ul>
                     </div></li>
-                <li class="team__li"><img src="./img/img-6.jpg"
-                         alt="Николай Тарасов"
-                         width="270"
-                         height="260">
+                <li class="team__li">
+                    <picture>
+                        <sourse srcset="
+                                                        ./img/img-6-1200-x.jpg 1x,
+                                                        ./img/img-6-1200-2x.jpg 2x" media="(min-width: 1200px)" />
+                        <sourse srcset="
+                                                        ./img/img-6-678-x.jpg 1x,
+                                                        ./img/img-6-678-2x.jpg 2x" media="(min-width: 768px)" />
+                        <sourse srcset="
+                                                        ./img/img-6-480-x.jpg 1x,
+                                                        ./img/img-6-480-2x.jpg 2x" media="(min-width: 480px)" />
+                        <img src="./img/img-6.jpg" alt="Игорь Демьяненко" />
+                    </picture>
                     <div class="team__h-p">
                     <h4 class="name">Николай Тарасов</h4>
                     <p class="team__profession">Marketing</p>
@@ -186,10 +231,19 @@
                     </ul>
                     </div>
                 </li>
-                <li class="team__li"><img src="./img/img-7.jpg"
-                         alt="Михаил Ермаков"
-                         width="270"
-                         height="260">
+                <li class="team__li">
+                        <picture>
+                            <sourse srcset="
+                                                                                ./img/img-7-1200-x.jpg 1x,
+                                                                                ./img/img-7-1200-2x.jpg 2x" media="(min-width: 1200px)" />
+                            <sourse srcset="
+                                                                                ./img/img-7-678-x.jpg 1x,
+                                                                                ./img/img-7-678-2x.jpg 2x" media="(min-width: 768px)" />
+                            <sourse srcset="
+                                                                                ./img/img-7-480-x.jpg 1x,
+                                                                                ./img/img-7-480-2x.jpg 2x" media="(min-width: 480px)" />
+                            <img src="./img/img-7.jpg" alt="Игорь Демьяненко" />
+                        </picture>
                     <div class="team__h-p">
                     <h4 class="name">Михаил Ермаков</h4>
                     <p class="team__profession">UI Designer</p>
@@ -376,7 +430,7 @@
         <!-- мобільна модал -->
         <div class="mob-menu backdrop is-hidden " data-menu>
             <div class="mob-container">
-                <div>
+                <div class="top-div">
                     <button class="button-menu menu-clouse" type="button" data-menu-close><svg class="menu-mobile-clouse"
                             width="40" height="40">
                             <use href="./img/sprite.svg#icon-close_40px"></use>
