--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 </ul>
             </nav>
             <ul class="contacts__list">
-                <li class="contacts__item"><a class="contacts__link" href=""><svg class="contacts__svg" width="16" height="12">
+                <li class="contacts__item"><a class="contacts__link" href=""><svg class="contacts__svg size-svg" width="16" height="12">
                         <use href="./img/sprite.svg#envelope"></use>
                     </svg>info@devstudio.com</a></li>
-                <li class="contacts__item"><a class="contacts__link" href="+380991111111"><svg class="contacts__svg" width="10" height="16">
+                <li class="contacts__item"><a class="contacts__link" href="+380991111111"><svg class="contacts__svg size-svg-tel" width="10" height="16">
                         <use href="./img/sprite.svg#smartphone"></use>
                     </svg>
                     +38 099 111 11 11</a></li>
@@ -54,7 +54,7 @@
         </section>
         <!-- Секция плюсов -->
         <section class="section">
-            <div class="container">
+            <div class="container conteiner-about">
             <ul class="arguments">
                 <li class="arguments__li"><h4 class="arguments__title">Внимание к деталям</h4> 
                     <p class="arguments__text">Идейные соображения, а также  начало повседневной работы по  формированию позиции.</p></li>
@@ -66,6 +66,7 @@
                     <p class="arguments__text">Значимость этих проблем настолько  очевидна, что реализация плановых  заданий.</p></li>
             </ul>
             </div>
+            </section>
         <section class="about ">
             <div class="container">
             <h2 class="about_title">Чем занимаемся</h2>
