--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </ul>
             </div>
         </section>
-        <section class="client">
+        <section class="client section">
                 <div class="container">
                 <h2 class="client__title">Постоянные клиенты</h2>
                 <ul class="client-ul">
